# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  ruff.toml
.github/workflows/: check_app.yml
gendiff/: __init__.py  cli.py
gendiff/output_formats/: __init__.py  format_json.py  format_plain.py  format_stylish.py  replacing_values.py
gendiff/scripts/: gendiff.py
gendiff/src/: create_tree.py  generate_diff.py  parser.py
tests/: test_generate_diff.py
tests/fixtures/: file7.txt  file_15.json  file_16.json  file_2.yaml  json_format.txt
